Frontend/css/styles.css
html {
    height: 100%;
    font-family: Raleway, ubuntu, sans-serif;
    overflow: hidden;
    line-height: 1.6;

}

:root,
:root.light {
    --bg-color: rgb(255, 255, 255);
    --text-color: black;
    --nav-color: #444444;
    --lcontainer-color: white;
    --startstop-color: #5a5a5a;
}


body {
    background: var(--bg-color);
    color: var(--text-color);
    height: 100%;
    margin: 0;
    overflow-x: hidden;
    /*overflow-y: auto;*/
}

.title_text {
    display: flex;
    flex-direction: row;
    align-items: baseline;
    justify-content: center;
}

h1 {
    font-size: 400%;
    text-align: center;
}

/**********************/
/* Select CFG NAVBAR */
/********************/

.custom-select-container {
    background-color: black;
    display: flex;
    width: 100%;
}

/*the container must be positioned relative:*/
.custom-select-own {
    position: relative;
    z-index: 100;
    width: 33.3333333333333333333333333333333333333333333%;
}

.custom-select-own select,
.custom-select-own select option {
    z-index: 100;
    width: 100%;
    text-align: center;
    font-size: 2vw;
    height: 5vw;
}

/***************/
/* TOP NAVBAR */
/*************/

.navbar {
    margin: 0;
    background: var(--nav-color);
    height: max-content;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 1.2rem;
    top: 0;
    z-index: 999;
    height: 16vw;
}

.logo-centered img,
.logo-left img {
    position: absolute;
    top: 0;
    left: auto;
    right: auto;
    align-items: center;
    size: auto;
    width: 80%;

}

.logo-centered {
    position: absolute;
    top: 0;
    left: 37%;
    width: 40%;
}

.version-centered {
    position: absolute;
    bottom: 0;
    left: 63%;
    color: white;
    font-size: 1vw;
}

.logo-left {
    position: absolute;
    top: 0;
    left: 8%;
    width: 30%;
}

.version-left {
    position: absolute;
    bottom: 0;
    left: 34%;
    color: white;
    font-size: 1vw;
}

.preferences-container {
    /*DEAD*/
    position: absolute;
    display: inline-block;
    cursor: pointer;
    z-index: 1000;
    left: 5%;
}

.prefBtn-container {
    position: absolute;
    display: flex;
    left: 5%;
}

button.prefBtnStyle {
    font-size: 2vw;
    font-weight: bold;
    background-color: #da0101;
    color: rgb(199, 198, 198);
    opacity: 75%;
    display: inline-block;
    margin-right: 5px;
    margin-top: 3px;
}

.navbar #menu-items {
    display: none;
}

button.menu-button-style {
    font-size: 2.5vw;
    height: 50%;
    background-color: #da0101;
    padding: 0.5em 0.5em;
    font-weight: bold;
    color: rgb(199, 198, 198);
    opacity: 75%;
    float: right;
}

.menu {
    right: 5%;
    position: absolute;
    display: flex;
}

.menu-item {
    right: 5%;
    display: inline-block;
    margin-right: 5px;
    margin-top: 3px;
    font-size: 1vw;
}

/***************/
/* LEFT-RIGHT */
/*************/

.left-right-container {
    /*background: rgba(52, 87, 226, 0.85);*/
    /*background: rgba(142, 138, 124, 0.7);*/
    min-height: 800px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin-left: 10%;
    margin-right: 10%;
}

/* LEFT-BOX */

@media only screen and (max-width: 786px) {
    .left-box {
        width: 80%;
        margin-left: 10%;
    }
}

.measurements-title {
    display: flex;
    justify-content: center;
    margin-top: 6vw;
    margin-bottom: 5px;
}

.left-container {
    display: flex;
    flex-wrap: wrap;
    border: 4px solid silver;
    min-width: 100%;
    height: 40vh;
    padding-left: 5%;
    padding-right: 5%;
    padding-bottom: 1%;
    padding-top: 4%;
    background-color: var(--lcontainer-color);
    position: relative;
    float: left;
    justify-content: space-between;
}

.left-container h3 {
    align-self: center;
    flex: 1 0 60%;
    height: 10px;
    font-size: 3vw;
}

.left-container p {
    align-self: center;
    font-size: 3vw;
    height: 10px;
}

.left-container i {
    font-size: 10vw;
}

.rpm-container {
    display: grid;
    align-items: center;
    flex-direction: row;
    flex: 1 0 60%;
    justify-content: space-around;
}

.start-stop-container {
    display: grid;
    align-items: center;
    flex-direction: row;
    flex: 1 0 60%;
    justify-content: space-around;
}

.start-stop-container button {
    color: rgb(255, 255, 255);
    background-color: var(--startstop-color);
    border: 2%;
    border-color: #444444;
    padding: 0.8vw 2vw;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 1em;
    margin-top: 1rem;
    border-radius: 5%;
    width: 8rem;
    max-width: 22vw;
    vertical-align: bottom;
    vertical-align: middle;
}

.connection-area {
    text-align: center;
}

h2 {
    font-size: 3.0vw;
}

/* Right-BOX */

.right-box {
    width: 60%;
    margin: 0px;
}

/*********/
/* GRAPH */
/*********/

.waveformcontainer {
    display: flex;
    background-color: rgb(255, 255, 255, 0);
    flex-wrap: wrap;
    width: fit-content;
    padding-top: 10px;
}

#graph-audio-1 {
    margin-right: 10px;
    width: calc(50% - 5px);
    height: 300px;
}

#graph-audio-2 {
    width: calc(50% - 5px);
    height: 300px;
}

#graph-rpm {
    margin-top: 10px;
    height: 300px;
    width: 100%;
}

#graph-info {
    border-bottom: 2px solid silver;
    background-color: #444444;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

#graph-label {
    font-size: 1.5em;
    color: rgb(255, 255, 255);
    padding-left: 10px;
    margin-bottom: 0;
}

#graph-settings-button {
    width: 1.4em;
    height: 1.4em;
    align-self: center;
    margin-right: 10px;
}

#paper {
    width: 100%;
    flex-grow: 1;
    background-color: #444444;
    z-index: -2;
}

#cursor-data {
    padding-left: 0.5em;
    padding-top: 2.5em;
    position: absolute;
    display: flex;
    flex-direction: column;
}

#cursor-data p {
    margin: 0;
    color: white;
}

.graph {
    display: flex;
    flex-direction: column;
    border: 4px solid silver;
}

#graph-canvas {
    position: absolute;
    top: 0;
    width: 100%;
    height: 100vh;
    z-index: -1;
    display: block;
}

